--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,3 @@
 useDynLib(nSGMM, .registration=TRUE)
-importFrom(Rcpp, evalCpp)
+importFrom(Rcpp, evalCpp, RcppParallel, RcppParallelLibs)
 exportPattern("^[[:alpha:]]+")
