--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,4 @@
 useDynLib(nSGMM, .registration=TRUE)
-importFrom(Rcpp, evalCpp, RcppParallel, RcppParallelLibs)
+importFrom(Rcpp, evalCpp)
+importFrom(RcppParallel, RcppParallelLibs)
 exportPattern("^[[:alpha:]]+")
